ecmascript/parser/tests/test262-error-references/fail/ed90acd86cc1eb9d.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/ed90acd86cc1eb9d.js:4:1
  |
4 | )
  | ^

